img host and photo attachment on post

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,6 +11,14 @@
   width: 40px;
 }
 
+.navbar-position{
+  position: fixed;
+  bottom:0vh;
+  left: 0vh;
+  width: 100vw;
+}
+
 body{
-  margin-bottom: 10vh;
+  width: 100vw;
+  height: max-content;
 }
