--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,6 +24,7 @@
         <td><%= post.song %></td>
         <td><%= post.title %></td>
         <td><%= post.description %></td>
+        <td><%= cl_image_tag post.photo.key %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
