--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,15 +4,15 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.association :user %>
     <%= f.input :artist %>
     <%= f.input :album %>
     <%= f.input :song %>
     <%= f.input :title %>
     <%= f.input :description %>
+    <%= f.input :photo, label: false, required: true, as: :file %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-primary"%>
   </div>
 <% end %>
