--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,11 @@
-<div class="navbar fixed-bottom navbar-expand-sm navbar-light navbar-lewagon">
+<div class="sticky-top navbar navbar-expand-sm navbar-light navbar-lewagon mobile-nofixed">
   <div class="container-fluid d-flex flex-row justify-content-around navbar-nav">
 
         <li class="nav-item">
           <%= link_to "Home", home_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Explore", explore_path, class: "nav-link" %>
+          <%= link_to "Explore", posts_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "New", new_post_path, class: "nav-link" %>
