cloudinary setup done, post rendered via partial

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -9,7 +9,7 @@
     <%= f.input :song %>
     <%= f.input :title %>
     <%= f.input :description %>
-    <%= f.input :photo, label: false, required: true, as: :file %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
