--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<h2 class="text-center bg-dark text-light m-0">Songstagram</h2>
 
 <table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Artist</th>
-      <th>Album</th>
-      <th>Song</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
   <tbody>
     <% @posts.each do |post| %>
       <%= render 'post', post: post %>
