--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="sticky-top navbar navbar-expand-sm navbar-light navbar-lewagon mobile-nofixed">
+<div class="sticky-top navbar navbar-expand-sm navbar-light navbar-lewagon mobile-nofixed m-0">
   <div class="container-fluid d-flex flex-row justify-content-around navbar-nav">
 
         <li class="nav-item">
