navbar dropup and routes

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  max-width: 450px;
 }
 
 .navbar-lewagon .navbar-collapse {
