--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,16 @@
 <h2>Sign up</h2>
 <h4>test</h4>
 
+
+
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :photo, as: :file %>
+    <%= f.input :name, required: true %>
+    <%= f.input :photo, label: "Profile picture",
+                required: true,
+                as: :file %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
