--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -2,7 +2,7 @@
 
 <h3>Cant find cl img key</h3>
 <div class="d-flex flex-row">
-  <%# <%= cl_image_tag @user.photo.key %> %>
+  <%= cl_image_tag current_user.photo.key %>
   <%= @user.name %>
 </div>
 
