avatar and name enabled for user

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,9 +8,8 @@
 
   <div class="form-inputs">
     <%= f.input :name, required: true %>
-    <%= f.input :photo, label: "Profile picture",
-                required: true,
-                as: :file %>
+    <%= f.input :avatar, label: "Profile picture",
+                required: true, as: :file%>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
