--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,8 +1,8 @@
 <h1>Profile</h1>
 
-<h3>Cant find cl img key</h3>
+
 <div class="d-flex flex-row">
-  <%= cl_image_tag current_user.photo.key %>
+  <%= cl_image_tag @user.avatar.key %>
   <%= @user.name %>
 </div>
 
