--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,9 +1,27 @@
-<h1>Profile</h1>
 
-
-<div class="d-flex flex-row">
-  <%= cl_image_tag @user.avatar.key %>
-  <%= @user.name %>
+<div class="d-flex flex-row justify-content-around my-3 profile">
+  <div class="d-flex flex-column text-center">
+    <div>
+    <%= cl_image_tag @user.avatar.key, crop: :fit, class: "avatar-large" %>
+    </div>
+    <h2 class="my-2">
+    <%= @user.name %>
+    </h2>
+  </div>
+  <div class="d-flex flex-column text-center ">
+    <h3><strong>20</strong></h3>
+    <h4>Follow</h4>
+  </div>
+  <div class="d-flex flex-column text-center">
+    <h3><strong>20</strong></h3>
+    <h4>Follow</h4>
+  </div>
+  <div class="d-flex flex-column text-center">
+    <h3><strong>20</strong></h3>
+    <h4>Follow</h4>
+  </div>
 </div>
 
-<%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary" %>
+<div class="d-flex justify-content-center">
+<%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary pd-5" %>
+</div>
