navbar dropup configured

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,7 +10,7 @@
 
   <div class="post-img">
     <% if post.photo.key %>
-      <%= cl_image_tag post.photo.key, crop: :fit, class: "post-img" %>
+      <%= cl_image_tag post.photo.key, crop: :fit, class: "fit-img" %>
     <% end %>
   </div>
 
