--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -26,3 +26,10 @@ body{
   background-color: #f5f5f5;
   margin-bottom: 50px;
 }
+
+@media (min-width: 100px){
+
+  .navbar-expand-sm .navbar-nav .dropdown-menu {
+    position: absolute;
+  }
+}
