--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -4,5 +4,13 @@
 }
 
 .post-img{
-  width: 100%;
+  width: 100vw;
+  height: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
+.fit-img{
+  max-width: 100%;
+  max-height: 100%;
 }
