--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,7 @@
 <div class="navbar fixed-bottom navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid d-flex flex-row justify-content-around navbar-nav">
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+
         <li class="nav-item">
           <%= link_to "Home", home_path, class: "nav-link" %>
         </li>
@@ -14,7 +12,7 @@
           <%= link_to "New", new_post_path, class: "nav-link" %>
         </li>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item dropup">
