--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h2 class="text-center bg-dark text-light m-0">Songstagram</h2>
+<h2 class="text-center m-0">Songstagram</h2>
 
 <% @posts.each do |post| %>
   <%= render 'post', post: post %>
