--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -5,12 +5,32 @@
 
 .post-img{
   width: 100vw;
+  max-width: 450px;
   height: 100vw;
+  max-height: 450px;
   display: flex;
   justify-content: center;
+  border-bottom: 1px solid;
+  border-color: rgb(185, 183, 183);
 }
 
 .fit-img{
   max-width: 100%;
   max-height: 100%;
+}
+
+.post{
+  border: 1px solid;
+  border-color: rgb(185, 183, 183);
+  border-radius: 4px;
+}
+
+.post-header{
+  border-bottom: 1px solid;
+  border-color: rgb(185, 183, 183);
+}
+
+.comments{
+  border-top: 1px solid;
+  border-color: rgb(185, 183, 183);
 }
