--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -34,3 +34,13 @@
   border-top: 1px solid;
   border-color: rgb(185, 183, 183);
 }
+
+.btn-like{
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.red-heart{
+  color: red;
+}
